fix bug for bubble chart on mobile version and remove export to images for pie chart

--- a/src/main/webapp/assets/sass/responsive.sass
+++ b/src/main/webapp/assets/sass/responsive.sass
@@ -27,8 +27,10 @@
       padding: 0
   .bubble-chart-block
     width: 65%
+  .chart-block
+    min-height: 430px
   #box
-    left: 115px
+    left: 0
     .textSize1
       span
         font-size: 10px
@@ -57,12 +59,12 @@
         width: 100px
         height: 100px
       span
-        font-size: 18px
+        font-size: 17px
         line-height: 22px
         top: 18px !important
         width: 100px
       strong
-        font-size: 25px
+        font-size: 23px
     .textSize4
       width: 125px
       height: 125px
@@ -106,6 +108,11 @@
         font-size: 45px
   .bubble-chart-container
     width: 80%
+    min-height: 380px
+  .pie-Chart-Container
+    padding-top: 0
+    width: 320px
+    min-height: 380px
   .find-jobs-container
     width: 100%
   .find-jobs-block
